--- a/homework/style.css
+++ b/homework/style.css
@@ -1,3 +1,28 @@
 .alert-error {
-  color: red;
+  color: rgb(255, 0, 0);
+  background-color: rgb(255, 146, 146);
+  list-style: none;
+  padding: 25px 30px;
+}
+
+.title{
+  background-color: royalblue;
+  padding: 25px 30px;
+  margin: auto;
+}
+.rep-item{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid rgb(111, 111, 111);
+  padding: 10px 20px;
+  list-style: none;
+  font-size: large;
+}
+.info{
+  display: inline;
+}
+.label{
+  font-weight: bold;
 }
